--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -79,10 +79,6 @@
   border-image-slice: 1;
 }
 
-.home .navbar {
-  border-bottom: 0;
-}
-
 .navbar-form {
   position: relative;
   margin-top: 0.25rem;
